--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="footer">
-    <p>&copy; y.b ></a></p>
+    <p>&copy; y.b <br/>!禁止外流!</a></p>
     </div>
     <div class="container">
         <h1 class="mb-4 text-center text-primary">懂得都懂</h1>
