--- a/index.html
+++ b/index.html
@@ -6,15 +6,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Question Sysetem</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body { background: #f0f2f5; font-family: 'Segoe UI', sans-serif; }
-        .container { max-width: 900px; margin: 40px auto; background: #fff; padding: 30px; border-radius: 15px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-        .card { border: none; border-left: 5px solid #0d6efd; margin-bottom: 15px; background: #f8f9fa; }
-        .question { font-weight: bold; font-size: 1.1em; }
-        .answer { color: #198754; margin-top: 8px; }
-        input { font-size: 16px; padding: 6px; margin: 5px 0; width: 100%; box-sizing: border-box; }
-        .footer {text-align: center;margin-top: 30px; font-size: 14px;color: #666;}
-        .footer a { color: #4CAF50;text-decoration: none; }
+     <style>
+        body {
+            background: linear-gradient(to right, #f0f2f5, #e0f7fa);
+            font-family: 'Segoe UI', sans-serif;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 40px auto;
+            background: #fff;
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.08);
+        }
+
+        h1 {
+            font-weight: bold;
+            position: relative;
+            margin-bottom: 20px;
+        }
+
+        h1 div {
+            font-size: 14px;
+            color: gray;
+        }
+
+        #searchInput {
+            font-size: 16px;
+            padding: 12px;
+            border-radius: 10px;
+            border: 1px solid #ccc;
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
+            transition: all 0.3s ease;
+        }
+
+        #searchInput:focus {
+            border-color: #0d6efd;
+            box-shadow: 0 0 10px rgba(13, 110, 253, 0.2);
+        }
+
+        .card {
+            border: none;
+            border-left: 5px solid #0d6efd;
+            margin-bottom: 15px;
+            background: #fff;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .card:hover {
+            transform: scale(1.02);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .question::before {
+            content: "❓ ";
+        }
+
+        .answer::before {
+            content: "🎯 ";
+        }
+
+        .question {
+            font-weight: bold;
+            font-size: 1.1em;
+        }
+
+        .answer {
+            color: #198754;
+            margin-top: 8px;
+        }
+
+        .footer {
+            text-align: center;
+            margin-top: 30px;
+            font-size: 14px;
+            color: #999;
+            padding: 15px 0;
+            border-top: 1px solid #eee;
+        }
+
+        .footer a {
+            color: #0d6efd;
+            text-decoration: none;
+        }
+
+        .footer a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
